# maxapi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docs.yml  lint.yml  mypy.yml  publish.yml  tests.yml
doc/: dev.md  router_inner_middleware.md  todo.md
docs/: MAX_API_Real_Payloads_2026.md  bot.md  dispatcher.md  examples.md  index.md  loggers.md
docs/client/: default.md
docs/connection/: base.md  index.md
docs/context/: context.md  index.md  state_machine.md
docs/enums/: api_path.md  attachment.md  button_type.md  chat_permission.md  chat_status.md  chat_type.md  http_method.md  index.md  intent.md  message_link_type.md  parse_mode.md  sender_action.md  text_style.md  update.md  upload_type.md
docs/exceptions/: dispatcher.md  download_file.md  invalid_token.md  max.md
docs/filters/: callback_payload.md  channel_post.md  command.md  contact.md  filter.md  handler.md  index.md  middleware.md
docs/guides/: context.md  documentation_handlers.md  file_inspector.md  filters.md  handlers.md  installation.md  keyboards.md  middleware.md  routers.md  webhook_vs_polling.md
docs/methods/: add_admin_chat.md  add_members_chat.md  change_info.md  delete_bot_from_chat.md  delete_chat.md  delete_message.md  delete_pin_message.md  edit_chat.md  edit_message.md  get_chat_by_id.md  get_chat_by_link.md  get_chats.md  get_list_admin_chat.md  get_me.md  get_me_from_chat.md  get_members_chat.md  get_message.md  get_messages.md  get_pinned_message.md  get_subscriptions.md  get_updates.md  get_upload_url.md  get_video.md  index.md  pin_message.md  remove_admin.md  remove_member_chat.md  send_action.md  send_callback.md  send_message.md  subscribe_webhook.md  unsubscribe_webhook.md
docs/methods/types/: added_admin_chat.md  added_members_chat.md  deleted_bot_from_chat.md  deleted_chat.md  deleted_message.md  deleted_pin_message.md  edited_message.md  getted_list_admin_chat.md  getted_members_chat.md  getted_pineed_message.md  getted_subscriptions.md  getted_updates.md  getted_upload_url.md  index.md  pinned_message.md  removed_admin.md  removed_member_chat.md  sended_action.md  sended_callback.md  sended_message.md  (+2 more)
docs/types/: callback.md  chats.md  command.md  errors.md  index.md  input_media.md  message.md  subscription.md  users.md
docs/utils/: file_inspector.md  index.md  inline_keyboard.md  message.md  updates.md  vcf.md
examples/: 01_echo_bot.py  02_formatting_bot.py  03_keyboard_bot.py  04_fsm_bot.py  05_media_bot.py  06_admin_bot.py  07_router_bot.py  08_middleware_bot.py  09_webhook_bot.py  10_callback_payload_bot.py  11_download_urls.py  12_deep_linking_bot.py  13_manual_events_bot.py  14_download_media_bot.py  README.md
examples/base_filter/: main.py
examples/callback_payload/: main.py
examples/echo/: main.py
examples/events/: main.py
examples/get_ids/: main.py
examples/keyboard/: main.py
examples/magic_filters/: main.py
examples/middleware_for_router/: main.py
examples/middleware_in_handlers/: main.py
examples/router_with_input_media/: main.py
examples/webhook/: high_level.py  low_level.py
maxapi/: __init__.py  bot.py  dispatcher.py  loggers.py
maxapi/client/: __init__.py  default.py
maxapi/connection/: base.py
maxapi/context/: __init__.py  base.py  context.py  manager.py  state_machine.py  storage.py  ttl.py
maxapi/enums/: __init__.py  _compat.py  add_chat_members_error_code.py  button_type.py  chat_permission.py  chat_type.py  parse_mode.py  text_style.py  update.py
maxapi/exceptions/: __init__.py  dispatcher.py  download_file.py  invalid_token.py  max.py
maxapi/filters/: __init__.py  callback_payload.py  channel_post.py  command.py  contact.py  filter.py  handler.py  middleware.py
maxapi/methods/: add_admin_chat.py  add_members_chat.py  change_info.py  delete_bot_from_chat.py  delete_chat.py  delete_message.py  delete_pin_message.py  edit_chat.py  edit_message.py  get_chat_by_id.py  get_chat_by_link.py  get_chats.py  get_list_admin_chat.py  get_me.py  get_me_from_chat.py  get_members_chat.py  get_message.py  get_messages.py  get_pinned_message.py  get_subscriptions.py  get_updates.py  get_upload_url.py  get_video.py  pin_message.py  remove_admin.py  remove_member_chat.py  send_action.py  send_callback.py  send_message.py  subscribe_webhook.py  unsubscribe_webhook.py
maxapi/storage/: __init__.py  base.py  memory.py  redis.py
maxapi/types/: __init__.py  bot_mixin.py  callback.py  chats.py  command.py  fetchable.py  file_info.py  input_media.py  message.py  named_bytes_io.py  shortcuts.py  users.py
maxapi/utils/: __init__.py  deep_linking.py  file_inspector.py  formatting.py  inline_keyboard.py  media.py  message.py  message_link.py  runtime.py  time.py  updates.py
maxapi/webhook/: base.py
tests/: __init__.py  check_env.py  conftest.py  get_chat_id.py  test_bot.py  test_channel_post_filter.py  test_chats_timestamps.py  test_contact_filter.py  test_context.py  test_coverage_gaps.py  test_dispatcher.py  test_dispatcher_register_handlers.py  test_download_file.py  test_enrich_event.py  test_errors.py  test_fetchable_refs.py  test_filters.py  test_format_parameter.py  test_formatting.py  test_getted_updates.py  test_handle_webhook_route.py  test_highlevel_shortcuts.py  test_integration.py  test_magic_filter_combinations.py  test_media_retry.py  test_memory_storage.py  test_message_body_none.py  test_message_url.py  test_messagecallback_none.py  test_middleware.py  test_nested_routers.py  test_public_reexports.py  test_retry.py  test_send_callback.py  test_send_message_fetch.py  test_serialization_models.py  test_storage.py  test_storages.py  test_strenum_compat.py  test_swagger_alignment.py  (+5 more)
tests/test_utils/: test_deep_linking.py  test_keyboard_builder.py  test_message_build_link.py  test_message_link.py  test_message_media_upload.py
tests/test_webhook/: test_dispatcher_startup_webhook.py  test_handle_webhook_route.py  test_security_warnings.py  test_webhook_post.py
wiki/: events.md  handlers.md  webhook.md
(+86 files in other folders)
