[project]
name = "maxapi"
version = "0.9.13"
description = "Библиотека для разработки чат-ботов с помощью API мессенджера MAX"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Denis", email = "bestloveapples@gmail.com" }]
keywords = ["max", "api", "bot"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.12.14",
    "magic_filter>=1.0.0",
    "pydantic>=1.8.0",
    "aiofiles==24.1.0",
    "puremagic==1.30",
]

[project.urls]
Homepage = "https://github.com/love-apples/maxapi"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["maxapi*", "wiki*", "examples*"]

[project.optional-dependencies]
webhook = ["fastapi>=0.68.0", "uvicorn>=0.15.0"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.12",
    "black>=24.1",
    "isort>=5.12",
    "mypy>=1.2",
    "types-aiofiles>=25.0.0",
    "pre-commit>=3.0",
    "coverage>=6.5",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
# Enable uv project management and include `dev` group by default when running/syncing
default-groups = ["dev"]
managed = true

[tool.mypy]
python_version = "3.10"
namespace_packages = true
ignore_missing_imports = true
exclude = ["core/yandex/cloud", "core/google"]
check_untyped_defs = true

[tool.pytest.ini_options]
# Путь к тестам
testpaths = ["tests"]

# Автоматический режим для asyncio
asyncio_mode = "auto"

# Параметры запуска
addopts = "-ra --strict-markers -v -W ignore::pytest.PytestUnraisableExceptionWarning"

# Маркеры
markers = [
    "integration: интеграционные тесты, требующие реальный токен бота",
    "slow: медленные тесты",
]

# Фильтры предупреждений
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]


[tool.ruff]
src = [ "maxapi", "tests" ]
exclude = ["core/yandex/cloud", "core/google"]
line-length = 79
indent-width = 4
target-version = "py310"
